add important to css

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -2,7 +2,6 @@
 ---
 
 @import "{{ site.theme }}";
-
 body{
-    font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif;
+    font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif !important;
 }
