--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -13,5 +13,5 @@ header, footer, nav,
 .inner, .inner h1, .inner h2, .inner h3, .inner h4, .inner h5, .inner h6,
 aside, aside h1, aside h2, aside h3, aside h4, aside h5, aside h6,
 #sidebar, #sidebar h1, #sidebar h2, #sidebar h3, #sidebar h4, #sidebar h5, #sidebar h6 {
-  font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif;
+    font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', '游ゴシック', 'Yu Gothic', 'ＭＳ Ｐゴシック', sans-serif;
 }
