--- a/pdf-configs/style.css
+++ b/pdf-configs/style.css
@@ -1,8 +1,5 @@
-@import url(//fonts.googleapis.com/earlyaccess/notosansjapanese.css);
-
 body {
-  font-size: 12px;
-  font-family: "Noto Sans Japanese", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+  font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', 'Meiryo', '游ゴシック', 'Yu Gothic', 'ＭＳ Ｐゴシック', sans-serif;
 }
 
 h1:first-child {
